@@ -1,6 +1,17 @@
 var Typeson = require('typeson');
 exports.Date = [
     function (x) { return Typeson.toStringTag(x) === 'Date'; },
-    function (date) { return date.getTime(); },
-    function (time) { return new Date(time); }
+    function (date) {
+        var time = date.getTime();
+        if (isNaN(time)) {
+            return 'NaN';
+        }
+        return time;
+    },
+    function (time) {
+        if (time === 'NaN') {
+            return new Date(NaN);
+        }
+        return new Date(time);
+    }
 ];
